--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@ body {
   letter-spacing: 0.02em;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -100,15 +104,36 @@ img {
   letter-spacing: 0.02em;
 }
 .section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+@media only screen and (min-width: 1158px) {
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 .container {
-  max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
+  max-width: 428px;
+  min-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .social-links {
@@ -139,9 +164,11 @@ img {
 }
 
 /* header */
-.header-container {
-  display: flex;
-  align-items: center;
+@media only screen and (min-width: 768px) {
+  .header-container {
+    display: flex;
+    align-items: center;
+  }
 }
 .header {
   border-bottom: 1px solid var(--border-accent-color);
@@ -158,7 +185,8 @@ img {
   color: var(--primary-color);
 }
 .logo-accent {
-  margin-right: 76px;
+  padding-top: 25px;
+  padding-bottom: 23px;
 
   color: var(--primary-brand-color);
   font-family: 'Raleway', sans-serif;
@@ -168,10 +196,24 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
-
+@media only screen and (min-width: 768px) {
+  .logo-accent {
+    margin-right: 120px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .logo-accent {
+    margin-right: 76px;
+  }
+}
 .nav-list {
-  display: flex;
-  gap: 40px;
+  display: none;
+}
+@media only screen and (min-width: 768px) {
+  .nav-list {
+    display: flex;
+    gap: 40px;
+  }
 }
 .header-nav-link.current {
   position: relative;
@@ -200,18 +242,38 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .header-nav-link:hover,
 .header-nav-link:focus {
   color: var(--pressed-state-color);
 }
 .header-contact {
-  font-style: normal;
-  margin-left: auto;
+  display: none;
+}
+@media only screen and (min-width: 768px) {
+  .header-contact {
+    display: block;
+    font-style: normal;
+    margin-left: auto;
+  }
 }
 .header-contact-list {
   display: flex;
   gap: 40px;
 }
+@media only screen and (min-width: 768px) {
+  .header-contact-list {
+    display: block;
+    font-style: normal;
+    margin-left: auto;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .header-contact-list {
+    display: flex;
+  }
+}
+
 .header-contact-link {
   color: var(--secondary-text-color);
 
@@ -223,31 +285,133 @@ img {
 .header-contact-link:focus {
   color: var(--pressed-state-color);
 }
+@media only screen and (min-width: 768px) {
+  .header-contact-link {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .header-contact-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+}
+.header-btn {
+  padding: 0;
+  margin-left: auto;
+  border: none;
+  background-color: transparent;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media only screen and (min-width: 768px) {
+  .header-btn {
+    display: none;
+  }
+}
+.icon-humburger {
+  stroke: var(--primary-color);
+}
 /* Hero section */
+
 .hero-section {
-  padding: 188px 0;
+  padding: 112px 0;
   margin-right: auto;
   margin-left: auto;
-  max-width: 1440px;
+  min-width: 320px;
+  width: 100%;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url('../images/hero-bg-img.jpg');
+    url('../images/hero-img/hero_bg_mob.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
-.hero-title {
-  max-width: 496px;
-  margin: 0 auto 48px;
+@media only screen and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/hero-img/hero_bg_mob@2x.jpg');
+  }
+}
+@media only screen and (min-width: 768px) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/hero-img/hero_bg_tab.jpg');
+  }
+}
+@media only screen and (min-width: 768px) and (min-resolution: 192dpi),
+  (min-width: 768px) and (min-device-pixel-ratio: 2),
+  (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/hero-img/hero_bg_tab@2x.jpg');
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/hero-img/hero_bg_desk.jpg');
+  }
+}
 
+@media only screen and (min-width: 1158px) and (min-resolution: 192dpi),
+  (min-width: 1168px) and (min-device-pixel-ratio: 2),
+  (min-width: 1168px) and (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/hero-img/hero_bg_desk@2x.jpg');
+  }
+}
+.hero-title {
+  max-width: 320px;
+  margin: 0 auto 72px;
   color: var(--white-text-bg-color);
   text-align: center;
-  font-size: 56px;
-  line-height: 1.07;
+
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
   letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
+@media only screen and (min-width: 768px) {
+  .hero-title {
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.07;
+    margin-bottom: 36px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .hero-title {
+    margin-bottom: 48px;
+  }
+}
+
 .hero-button {
   transition-property: background-color;
   transition-duration: 250ms;
@@ -261,29 +425,84 @@ img {
 
 .advantages-list {
   display: flex;
-  gap: var(--indent-col);
+  flex-direction: column;
+  gap: 72px;
 }
-.advantages-list-item {
-  width: calc((100% - var(--indent-col) * 3) / 4);
+@media only screen and (min-width: 768px) {
+  .advantages-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
 }
-.advantages-list-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 112px;
-  margin-bottom: 8px;
 
-  background-color: var(--cloud-bg-color);
-  border-radius: 4px;
+@media only screen and (min-width: 768px) {
+  .advantages-list-item {
+    width: calc((100% - 24px) / 2);
+  }
 }
+@media only screen and (min-width: 1158px) {
+  .advantages-list-item {
+    width: calc((100% - var(--indent-col) * 3) / 4);
+  }
+}
+
+.advantages-list-icon {
+  display: none;
+}
+@media only screen and (min-width: 1158px) {
+  .advantages-list-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    margin-bottom: 8px;
+
+    background-color: var(--cloud-bg-color);
+    border-radius: 4px;
+  }
+}
+
 .advantages-list-title {
   margin-bottom: 8px;
-}
 
+  color: var(--primary-color);
+  text-align: center;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+@media only screen and (min-width: 768px) {
+  .advantages-list-title {
+    text-align: start;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .advantages-list-title {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+  }
+}
+.advantages-list-text {
+  font-weight: 500;
+}
+@media only screen and (min-width: 1158px) {
+  .advantages-list-text {
+    font-weight: 400;
+  }
+}
 /* expertise section */
 
 .expertise-section {
-  padding-top: 0;
+  display: none;
+}
+@media only screen and (min-width: 1158px) {
+  .expertise-section {
+    display: block;
+    padding-top: 0;
+  }
 }
 .expertise-title {
   margin-bottom: 72px;
@@ -294,16 +513,32 @@ img {
 }
 
 /* team section */
-.team {
+.team-section {
   background-color: var(--cloud-bg-color);
 }
 .team-list {
   display: flex;
-  gap: var(--indent-col);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 72px;
 }
-.team-list-item {
-  width: calc((100% - var(--indent-col) * 3) / 4);
+@media only screen and (min-width: 768px) {
+  .team-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 64px 24px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .team-list {
+    gap: 24px;
+  }
+}
 
+.team-list-item {
+  max-width: 264px;
+  width: 100%;
   text-align: center;
   background-color: var(--white-text-bg-color);
   border-radius: 0px 0px 4px 4px;
@@ -311,6 +546,7 @@ img {
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+
 .team-card-container {
   padding: 32px 0;
 }
@@ -326,19 +562,28 @@ img {
 .team-social-icon {
   fill: var(--white-text-bg-color);
 }
+
 /*customers section*/
+
 .customers-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: var(--indent-col);
+  gap: 16px;
 }
+@media only screen and (min-width: 1158px) {
+  .customers-list {
+    gap: 24px;
+  }
+}
+
 .customers-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 168px;
+  max-width: 190px;
   height: 88px;
-  padding: 16px 32px;
+  padding: 16px 40px;
 
   color: var(--ligth-text-color);
   border-radius: 4px;
@@ -347,6 +592,12 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media only screen and (min-width: 1158px) {
+  .customers-link {
+    max-width: 168px;
+  }
+}
+
 .customer-icon {
   fill: currentColor;
   flex-shrink: 0;
@@ -367,27 +618,62 @@ img {
 
 /* footer */
 .footer {
-  padding: 100px 0;
-
+  padding: 98px 0 96px;
   background-color: var(--primary-color);
 }
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
-.footer-link {
-  display: inline-block;
-  margin-bottom: 16px;
+@media only screen and (min-width: 768px) {
+  .footer-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: start;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .footer-container {
+    align-items: baseline;
+  }
+}
+
+.footer-first-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 72px;
+}
+@media only screen and (min-width: 768px) {
+  .footer-first-block {
+    align-items: start;
+    margin-right: 24px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .footer-first-block {
+    margin-right: 120px;
+    margin-bottom: 0;
+  }
+}
+.logo-accent.footer-link {
+  padding: 0;
+  margin-bottom: 17px;
 }
 .footer-logo {
   color: var(--cloud-bg-color);
 }
 
 .footer-text {
-  width: 264px;
-
+  max-width: 268px;
   color: var(--cloud-bg-color);
 }
-.footer-container {
-  display: flex;
-  align-items: baseline;
+@media only screen and (min-width: 768px) {
+  .footer-text {
+    width: 264px;
+  }
 }
 .footer-title {
   font-weight: 500;
@@ -395,12 +681,23 @@ img {
   color: var(--white-text-bg-color);
   margin-bottom: 16px;
 }
-.footer-first-block {
-  margin-right: 120px;
-}
+
 .footer-solcailmedia-block {
-  margin-right: 80px;
+  text-align: center;
+  margin-bottom: 72px;
 }
+@media only screen and (min-width: 768px) {
+  .footer-solcailmedia-block {
+    text-align: start;
+    margin-bottom: 0;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .footer-solcailmedia-block {
+    margin-right: 80px;
+  }
+}
+
 .footer-links {
   gap: 16px;
 }
@@ -409,16 +706,30 @@ img {
   background-color: var(--footer-accent-color);
 }
 
-.footer-text {
-  margin-bottom: 16px;
+.form-container {
+  text-align: center;
+}
+@media only screen and (min-width: 768px) {
+  .form-container {
+    text-align: start;
+  }
 }
 
 .footer-form {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
 }
+
+@media only screen and (min-width: 768px) {
+  .footer-form {
+    gap: 24px;
+  }
+}
+
 .footer-form-input {
-  width: 264px;
+  width: 398px;
   height: 40px;
   padding-left: 16px;
 
@@ -430,6 +741,7 @@ img {
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid var(--white-text-bg-color);
+  opacity: 0.3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .footer-form-input::placeholder {
@@ -438,6 +750,16 @@ img {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
+}
+@media only screen and (min-width: 768px) {
+  .footer-form-input {
+    width: 264px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .footer-form-input {
+    opacity: 1;
+  }
 }
 
 .footer-form-btn {
@@ -474,16 +796,35 @@ img {
 
 /*PORTFOLIO PAGE  */
 .porfolio-section {
-  padding-top: 96px;
+  padding-top: 48px;
+}
+@media only screen and (min-width: 768px) {
+  .porfolio-section {
+    padding-top: 96px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .porfolio-section {
+    padding-top: 100px;
+  }
 }
 .filter-list {
   display: flex;
-  gap: var(--indent-col);
-  justify-content: center;
-
-  margin-bottom: 72px;
+  flex-wrap: wrap;
+  gap: 16px 24px;
+  margin-bottom: 48px;
 }
-
+@media only screen and (min-width: 768px) {
+  .filter-list {
+    justify-content: center;
+    margin-bottom: 64px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .filter-list {
+    margin-bottom: 72px;
+  }
+}
 .filter-btn {
   border-radius: 4px;
   border: 1px solid var(--border-accent-color);
@@ -506,18 +847,26 @@ img {
 
 .portfolio-list {
   display: flex;
-  row-gap: var(--indent-row);
-  column-gap: var(--indent-col);
   flex-wrap: wrap;
+  gap: 72px 24px;
 }
 .portfolio-img-overlay {
   position: relative;
   overflow: hidden;
 }
 .portfolio-list-item {
-  width: calc((100% - (var(--indent-col)) * 2) / 3);
-
   background-color: var(--white-text-bg-color);
+}
+
+@media only screen and (min-width: 768px) {
+  .portfolio-list-item {
+    max-width: calc((100% - 24px) / 2);
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .portfolio-list-item {
+    max-width: calc((100% - (var(--indent-col)) * 2) / 3);
+  }
 }
 .portfolio-link {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -586,7 +935,7 @@ img {
 
   opacity: 1;
   visibility: visible;
-
+  overflow: hidden;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -784,4 +1133,107 @@ input[type='checkbox']:checked + .modal-form-agreement .modal-form-checkbox {
 .modal-form-btn:hover,
 .modal-form-btn:focus {
   background-color: var(--pressed-state-color);
+}
+/*mobile-menu*/
+.mobile-menu-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 80px 35px 40px 40px;
+
+  flex-direction: column;
+  width: 100%;
+  max-width: 768px;
+  height: 100vh;
+
+  background-color: var(--white-text-bg-color);
+}
+
+.mobile-menu-container.is-open {
+  display: flex;
+}
+
+.mobile-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media not (hover: hover) {
+  .mobile-close-btn:active .modal-close-icon {
+    fill: var(--white-text-bg-color);
+  }
+  .mobile-close-btn:active {
+    background-color: var(--pressed-state-color);
+    border: none;
+  }
+  .social-link-item:active {
+    background-color: var(--pressed-state-color);
+  }
+
+}
+
+.mobile-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: auto;
+}
+.mobile-menu-link {
+  color: var(--primary-color);
+
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+.mobile-menu-link.current {
+  color: var(--pressed-state-color);
+}
+.mobile-menu-contact-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.mobile-menu-contact {
+  margin-bottom: 48px;
+}
+.mobile-menu-contact-link.phone {
+  color: var(--primary-brand-color);
+
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+.mobile-menu-contact-link.email {
+  color: var(--secondary-text-color);
+
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+.mobile-social-links {
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 56px;
 }
