--- a/css/styles.css
+++ b/css/styles.css
@@ -1038,6 +1038,16 @@ img {
 .modal-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media (hover: hover) {
+  .modal-close-btn:active .modal-close-icon {
+    fill: var(--white-text-bg-color);
+  }
+  .modal-close-btn:active {
+    background-color: var(--pressed-state-color);
+    border: none;
+  }
+}
+
 .modal-close-btn:hover .modal-close-icon,
 .modal-close-btn:focus .modal-close-icon {
   fill: var(--white-text-bg-color);
