--- a/css/styles.css
+++ b/css/styles.css
@@ -373,6 +373,7 @@ img {
 }
 @media only screen and (min-width: 1158px) {
   .hero-section {
+    padding: 188px 0;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -385,6 +386,7 @@ img {
   (min-width: 1168px) and (min-device-pixel-ratio: 2),
   (min-width: 1168px) and (min-resolution: 2dppx) {
   .hero-section {
+    padding: 188px 0;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -583,6 +585,11 @@ img {
   justify-content: center;
   gap: 16px;
 }
+@media only screen and (min-width: 768px) {
+  .customers-list {
+    gap: 72px 24px;
+  }
+}
 @media only screen and (min-width: 1158px) {
   .customers-list {
     gap: 24px;
@@ -754,6 +761,7 @@ img {
 }
 
 .footer-form-input {
+  max-width: 100%;
   width: 398px;
   height: 40px;
   padding-left: 16px;
@@ -769,6 +777,7 @@ img {
   opacity: 0.3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
+
 .footer-form-input::placeholder {
   color: var(--white-text-bg-color);
 
@@ -900,7 +909,7 @@ img {
 
 @media only screen and (min-width: 768px) {
   .portfolio-list-item {
-    max-width: calc((100% - 24px) / 2);
+    max-width: calc((100% - var(--indent-col)) / 2);
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -1010,6 +1019,18 @@ img {
   transform: translateX(-50%) translateY(-50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+/* @media only screen and (min-width:428px) and (max-width: 767.98px) {
+  .modal {
+    width: 392px;
+  }
+} */
+@media only screen and  (max-width: 427.98px) {
+  .modal {
+    max-width: 392px;
+    width: 100%;
+  }
+}
+
 .backdrop.is-hidden .modal {
   transform: translateX(-50%) translateY(-50%) scale(0.2);
   opacity: 0;
@@ -1193,6 +1214,7 @@ input[type='checkbox']:checked + .modal-form-agreement .modal-form-checkbox {
 .modal-form-btn:focus {
   background-color: var(--pressed-state-color);
 }
+
 /*mobile-menu*/
 .mobile-menu-container {
   display: none;
@@ -1202,9 +1224,9 @@ input[type='checkbox']:checked + .modal-form-agreement .modal-form-checkbox {
   padding: 80px 35px 40px 40px;
 
   flex-direction: column;
-  width: 100%;
   max-width: 768px;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
   background-color: var(--white-text-bg-color);
 }
@@ -1286,6 +1308,12 @@ input[type='checkbox']:checked + .modal-form-agreement .modal-form-checkbox {
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
+@media only screen and (max-width: 428px) {
+  .mobile-menu-contact-link.phone {
+    font-size: 24px;
+  }
+}
+
 .mobile-menu-contact-link.email {
   color: var(--secondary-text-color);
 
@@ -1299,4 +1327,9 @@ input[type='checkbox']:checked + .modal-form-agreement .modal-form-checkbox {
   justify-content: flex-start;
   flex-wrap: wrap;
   gap: 56px;
+}
+@media only screen and (max-width: 428px) {
+  .mobile-social-links {
+    gap: 24px;
+  }
 }
