--- a/css/styles.css
+++ b/css/styles.css
@@ -749,7 +749,7 @@ img {
 
 .footer-form {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   gap: 16px;
 }
@@ -761,7 +761,6 @@ img {
 }
 
 .footer-form-input {
-  max-width: 100%;
   width: 398px;
   height: 40px;
   padding-left: 16px;
@@ -776,6 +775,12 @@ img {
   border: 1px solid var(--white-text-bg-color);
   opacity: 0.3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+@media only screen and (max-width: 427.98px) {
+  .footer-form-input {
+    max-width: 398px;
+    width: 100%;
+  }
 }
 
 .footer-form-input::placeholder {
@@ -801,7 +806,7 @@ img {
   align-items: center;
   justify-content: center;
 
-  min-width: 165px;
+  width: 165px;
   height: 40px;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -1019,12 +1024,8 @@ img {
   transform: translateX(-50%) translateY(-50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* @media only screen and (min-width:428px) and (max-width: 767.98px) {
-  .modal {
-    width: 392px;
-  }
-} */
-@media only screen and  (max-width: 427.98px) {
+
+@media only screen and (max-width: 427.98px) {
   .modal {
     max-width: 392px;
     width: 100%;
