--- a/css/styles.css
+++ b/css/styles.css
@@ -611,7 +611,7 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media only screen and (min-width: 1158px) {
+@media only screen and (min-width: 768px) {
   .customers-link {
     max-width: 168px;
   }
@@ -652,18 +652,18 @@ img {
 .footer-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 @media only screen and (min-width: 768px) {
   .footer-container {
+    width: 584px;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: start;
   }
 }
 @media only screen and (min-width: 1158px) {
   .footer-container {
+    width: 100%;
     align-items: baseline;
   }
 }
